CSS/style.css
/* ... */
footer .top-footer .container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  padding: 40px 0;
}

footer .top-footer .container .box {
  width: 23%;
}

footer .top-footer .container .box img {
  width: 200px;
  margin-bottom: 20px;
}

footer .top-footer .container .box .desc {
  color: var(--text-color);
  margin-bottom: 20px;
}

footer .top-footer .container .box .icons {
  display: flex;
  gap: 10px;
}

footer .top-footer .container .box .icons a {
  transition: var(--transition);
  color: var(--white-color);
  padding: 10px;
  background-color: var(--main-color);
  width: 40px;
  height: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 4px;
  font-size: 1rem;
}

footer .top-footer .container .box .icons a:hover {
  transform: translateY(-10px);
}

footer .top-footer .container .box ul li {
  position: relative;
}

footer .top-footer .container .box ul li a {
  transition: var(--transition);
  display: flex;
  margin-bottom: 10px;
  position: relative;
}

footer .top-footer .container .box ul li a::before {
  position: absolute;
  content: "";
  border: 7px solid #efff;
  border-color: transparent transparent transparent var(--main-color);
  left: -15px;
  top: 50%;
  transform: translateY(-50%);
}

footer .top-footer .container .box ul li:hover a {
  margin-left: 10px;
  color: var(--white-color);
}

footer .top-footer .container .box ul li a {
  color: var(--text-color);
}

@media (max-width: 1100px) {
  footer .top-footer .container {
    gap: 30px;
  }
  footer .top-footer .container .box {
    width: 48%;
  }
}
@media (max-width: 768px) {
  footer .top-footer .container .box {
    width: 100%;
  }
}

footer h4 {
  color: var(--bg-color);
  margin-bottom: 20px;
  font-size: 1.3rem;
}

footer .bottom-footer {
  background-color: #1d1f22;
}

footer .bottom-footer .container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 20px 10px 10px;
}

footer .bottom-footer .copy-rights {
  color: var(--bg-color);
}

footer .bottom-footer .copy-rights span {
  color: var(--main-color);
}

@media (max-width: 768px) {
  footer .bottom-footer .container {
    justify-content: center;
    gap: 10px;
    flex-direction: column;
  }
}

/* To Top Button */
.to-top {
  position: fixed;
  right: -60px;
  bottom: 20px;
  background-color: var(--main-color);
  width: 40px;
  height: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 4px;
  color: var(--white-color);
  cursor: pointer;
  opacity: 0;
  transition: var(--transition);
}

.to-top:hover {
  background-color: var(--hover-color);
}

.show {
  display: flex;
  right: 20px;
  opacity: 1;
}

/* Start Wish List */

.wish-list,
.cart-list {
  background-color: #fff;
  position: fixed;
  top: 0;
  right: 0;
  height: 100%;
  width: 350px;
  z-index: 1000;
  border-left: 1px solid var(--border-color);
  display: flex;
  flex-direction: column;
  transition: 0.3s ease;
  transform: translateX(350px);
}

.cart-list {
  z-index: 1100;
}

.wish-list .top,
.cart-list .top {
  padding: 20px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  border-bottom: 1px solid var(--border-color);
}

.wish-list .top .close-wish,
.cart-list .top .close-cart {
  width: 40px;
  height: 40px;
  border: 1px solid var(--border-color);
  font-size: 2rem;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  transition: var(--transition);
}

.wish-list .top .close-wish:hover,
.cart-list .top .close-cart:hover {
  background-color: var(--main-color);
  color: var(--white-color);
}

.wish-list .list,
.cart-list .list {
  padding: 20px;
  overflow-y: auto;
}

.list .item {
  display: flex;
  align-items: center;
  margin-bottom: 10px;
  padding-bottom: 10px;
  gap: 10px;
}

.list h4 {
  font-weight: normal;
  overflow: hidden;
  -webkit-line-clamp: 2;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  font-size: 0.9rem;
  margin-bottom: 10px;
}

.list .item .controller {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-top: 20px;
}

.list .quantity {
  display: flex;
  align-items: center;
  gap: 10px;
}

.list .quantity button {
  width: 30px;
  height: 30px;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid var(--main-color);
  border-radius: 4px;
  font-size: 1rem;
  transition: var(--transition);
}

.list .quantity button:hover {
  background-color: var(--main-color);
  color: var(--white-color);
}


.list .item .delete {
  background-color: transparent;
  font-size: 1.4rem;
  transition: var(--transition);
  cursor: pointer;
  color: var(--text-color);
}

.list .item .delete:hover {
  color: var(--sale-color);
}

.list .item img {
  width: 100%;
  max-width: 80px;
}

.list .item .price {
  color: var(--text-color);
}

.list .item:not(:last-child) {
  border-bottom: 1px solid var(--border-color);
}

.wish-list .foot {
  padding: 20px;
  margin-top: auto;
  border-top: 1px solid var(--border-color);
  display: flex;
  justify-content: center;
}

.cart-list .foot {
  padding: 20px;
  display: flex;
  flex-direction: column;
  margin-top: auto;
  border-top: 1px solid var(--border-color);
  justify-content: space-between;
}

.cart-list .foot .subtotal {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 20px;
  font-size: 1.2rem;
}

.cart-list .foot .subtotal .total {
  color: var(--main-color);
}

.cart-list .foot .btns {
  display: flex;
  justify-content: center;
  gap: 20px;
}

.shop-more,
.checkout {
  padding: 10px 20px;
  font-size: 1rem;
  border: 2px solid var(--main-color);
  background-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  transition: var(--transition);
}

.checkout {
  background-color: var(--main-color);
  color: #fff;
}

.checkout:hover {
  background-color: var(--hover-color);
}
/* ... */

